--- a/assets/scss/blocks/pricing_calculator.scss
+++ b/assets/scss/blocks/pricing_calculator.scss
@@ -387,6 +387,10 @@
 			img {
 				border-radius: 10px;
 			}
+			button, a {
+				display: inline-block;
+				margin-bottom: 5px;
+			}
 		}
 	}
 
